# agent-pane

./: .gitignore  AGENT_PANE_SMOKE.txt  README.md  package-lock.json  package.json
.grok/hooks/: fix-loop-ensure-web.sh  fix-loop-mark-dirty.sh  fix-loop.json
apps/bridge/: package.json
apps/bridge/scripts/: fix-node-pty.mjs  smoke-serve.ts
apps/bridge/src/: acp-stdio-transport.ts  acp-text.ts  acp-transport.ts  acp-ws-hub.ts  acp-ws-transport.ts  attachment-persist.ts  browser-mcp-config.ts  browser-mcp.ts  browser-session.ts  customize-config.ts  daemon-supervisor.ts  diff-engine.ts  event-store.ts  grok-acp-adapter.ts  grok-session-import.ts  grok-signals-watcher.ts  history-index.ts  http-api.ts  index.ts  path-env.ts  provider-api.ts  session-manager.ts  terminal-pty.ts  workspace-snapshot.ts
apps/desktop/: package.json
apps/desktop/scripts/: bundle-bridge.mjs
apps/desktop/sidecar/: bridge.cjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/: bridge.cjs  browser-mcp.cjs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: AgentActivityStrip.tsx  AgentBrowserPanel.tsx  App.tsx  CustomizePanel.tsx  api.ts  (+22 more)
docs/: architecture-agent-core-multi-front.md  cursor-dark-tokens.md  open-source-agent-ui-refs.md
docs/research/: acp-resume-patterns.md
scripts/: agent-pane  reload-desktop
scripts/lib/: import_grok_session.py
(+6 files in other folders)
