[package]
name = "agent-pane"
version = "0.1.0"
description = "Agent Pane — full-window Grok agent UI"
authors = ["Noctis"]
edition = "2021"

[lib]
name = "agent_pane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for real transparent windows on macOS
# (without it, CSS alpha sits on an opaque WKWebView — glass looks solid)
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
